# -face-verification-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
eda_output/: cross_dataset_comparison.csv  dataset_summary.csv  duplicate_summary.csv  photometric_statistics.csv
logs/: detection_log_agedb.csv  detection_log_lfw.csv
notebooks/: 02_extract_embeddings.ipynb  03_compare_pairs.ipynb  04_evaluate.ipynb  06_SOTA_ViT_Evaluation.ipynb  07_PAD_analysis.ipynb  07_summary.ipynb
notebooks/evaluation_output/: 06_swinface_comparison.csv
notebooks/pad_output/: pad_summary_metrics.csv  per_attack_apcer.csv
notebooks/summary_output/: 08_all_models_metrics.csv
results/: distances_arcface_agedb.csv  distances_arcface_lfw.csv  distances_ghostface_agedb.csv  distances_ghostface_lfw.csv  distances_swinface_agedb.csv  distances_swinface_lfw.csv  embedding_metrics.csv  evaluation_metrics.csv  pairs_agedb.csv  pairs_agedb_raw.csv  pairs_lfw.csv  pairs_lfw_raw.csv  verification_metrics.csv
scripts/: bootstrap_swinface.sh  parse_pairs.py
space-liveness/: .dockerignore  .gitignore  Dockerfile  README.md  TECHNICAL_DOCUMENTATION.md  app.py  pyproject.toml  requirements.txt
space-liveness/db/ja/: ds_model_facenet512_detector_retinaface_aligned_normalization_base_expand_0.pkl
space-liveness/src/: __init__.py  gradio_app.py  live_cam.py  main.py  pipeline.py  static_test.py
space-liveness/src/pad/: liveness.py  liveness_check.py  mobilenet_gradcam.py  physical_features.py
space-liveness/src/ui/: __init__.py  hf_handlers.py  hf_layout.py  hf_strings.py  research_handlers.py  research_layout.py  research_strings.py
space-liveness/src/vision/: detector.py  embedder.py  swinface_embedder.py
space-liveness/src/xai/: explainability.py
space-liveness/tests/: test_pad_liveness.py
space-main/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  podsumowanie.md  pyproject.toml  requirements.txt
space-main/src/: gradio_app.py  main.py  pipeline.py  static_test.py
space-main/src/pad/: physical_features.py
space-main/src/vision/: detector.py  face_detector_batch.py  swinface_embedder.py
space-main/src/xai/: explainability.py
