[project]
name = "nask-face-recognition"
version = "0.1.0"
description = "Face Recognition Research Pipeline — NASK Computer Vision Expert Assessment"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Jakub", email = "jakub@example.com"},
]

dependencies = [
    # Core scientific stack
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "scipy>=1.12",
    "scikit-learn>=1.4",

    # Image processing
    "opencv-python-headless>=4.9",
    "Pillow>=10.2",
    "imagehash>=4.3",

    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Deep learning
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0",

    # Face recognition models
    "insightface>=0.7.3",
    "onnxruntime>=1.17",

    # Utilities
    "tqdm>=4.66",
    "piexif>=1.1",
    "tabulate>=0.9",

    # Jupyter
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
]

[project.optional-dependencies]
deepface = [
    "deepface>=0.0.92",
    "tf-keras>=2.16",
]
mlops = [
    "mlflow>=2.11",
    "dvc>=3.47",
]
dev = [
    "ruff>=0.3",
    "pre-commit>=3.6",
    "nbstripout>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.3",
    "pre-commit>=3.6",
    "nbstripout>=0.7",
]
