[project]
name = "space-liveness"
version = "0.1.0"
description = "Face verification, PAD/liveness, and Gradio demos (HF Space + research UI)"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "deepface>=0.0.92",
    "gradio>=6.9.0",
    "insightface>=0.7.3",
    "numpy>=1.26.0,<2.3",
    "onnxruntime>=1.18.0,<1.24",
    "opencv-python-headless>=4.8.0,<4.11",
    "pandas>=2.2.0,<3.0",
    "scikit-image>=0.24.0",
    "tf-keras>=2.16.0",
    "timm>=1.0.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
    "PLC",
    "PLE",
]
ignore = [
    "E501",
    "B008",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"src/pad/mobilenet_gradcam.py" = ["N812"]
"src/xai/explainability.py" = ["N812"]
"src/pad/physical_features.py" = ["N806"]
"src/pipeline.py" = ["TC002"]
"src/vision/embedder.py" = ["SIM108"]
"src/vision/swinface_embedder.py" = ["RUF012"]
"src/pad/liveness_check.py" = ["SIM108"]
"src/ui/research_layout.py" = ["SIM117"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
